--- a/classwebsite/final website/stylesheet.css
+++ b/classwebsite/final website/stylesheet.css
@@ -3,6 +3,12 @@ body{
 	height:100vh;
 }
 
+.lofi{
+	bottom:0;
+	position:fixed;
+	right:0;
+	z-index: 10000;
+}
 
 .grid-item {
 	height:300px;
@@ -15,6 +21,7 @@ body{
 	grid-template-columns: auto auto auto;
 	padding: 10px;
 	justify-content:center;
+	padding:40px;
 }
 
 .box {
@@ -72,20 +79,36 @@ h2 {
 	padding-bottom:100px;
 }
 
-.art{
-	position: absolute;
-  	top: 0;
+
+.artwork{
+
+	transition: 0.6s
+
+}
+
+.artwork:hover{
+	opacity:.5;
+}
+
+p1{
+	position:fixed;
+	top:630px;
+	right:8%;
+	font-family:Didot,serif;
+	font-size:14px;
+	color:gray;
 }
 
 .artwork img{
-	height:500px;
-	width:auto;
 	position:fixed;
+	height:400px;
+	width:auto;
 	top:200;
 	right:7%;
 	border-radius:10%;
 	z-index: 5;
 }
+
 
 .back{
 	font-family: Optima, sans-serif;
