--- a/classwebsite/final website/stylesheet.css
+++ b/classwebsite/final website/stylesheet.css
@@ -77,12 +77,13 @@ h2 {
 	left:15%;
 	z-index: 10;
 	padding-bottom:100px;
+	padding-left: 100px
 }
 
 
 .artwork{
-
 	transition: 0.6s
+
 
 }
 
@@ -94,6 +95,7 @@ p1{
 	position:fixed;
 	top:630px;
 	right:8%;
+	padding-right: 100px;
 	font-family:Didot,serif;
 	font-size:14px;
 	color:gray;
@@ -101,6 +103,7 @@ p1{
 
 .artwork img{
 	position:fixed;
+	padding-right:100px;
 	height:400px;
 	width:auto;
 	top:200;
